apps/base/organisers/radarr/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`radarr.${CLUSTER_DOMAIN}`) # TODO Replace with variable
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
    - kind: Rule
      match: Host(`radarr.${CLUSTER_DOMAIN}`) && PathPrefix(`/api`)
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
  tls:
    certResolver: cloudflare
